--- a/src/Resources/Locales/zh_TW.axaml
+++ b/src/Resources/Locales/zh_TW.axaml
@@ -747,7 +747,7 @@
   <x:String x:Key="Text.Statistics.TotalCommits" xml:space="preserve">提交次數:</x:String>
   <x:String x:Key="Text.Submodule" xml:space="preserve">子模組</x:String>
   <x:String x:Key="Text.Submodule.Add" xml:space="preserve">新增子模組</x:String>
-  <x:String x:Key="Text.Submodule.CopyPath" xml:space="preserve">複製路徑</x:String>
+  <x:String x:Key="Text.Submodule.CopyPath" xml:space="preserve">相對路徑</x:String>
   <x:String x:Key="Text.Submodule.Deinit" xml:space="preserve">取消初始化</x:String>
   <x:String x:Key="Text.Submodule.FetchNested" xml:space="preserve">提取子模組</x:String>
   <x:String x:Key="Text.Submodule.Histories" xml:space="preserve">變更歷史</x:String>
