--- a/src/Resources/Locales/zh_CN.axaml
+++ b/src/Resources/Locales/zh_CN.axaml
@@ -708,6 +708,11 @@
   <x:String x:Key="Text.SelfUpdate.IgnoreThisVersion" xml:space="preserve">忽略此版本</x:String>
   <x:String x:Key="Text.SelfUpdate.Title" xml:space="preserve">软件更新</x:String>
   <x:String x:Key="Text.SelfUpdate.UpToDate" xml:space="preserve">当前已是最新版本。</x:String>
+  <x:String x:Key="Text.SetSubmoduleBranch" xml:space="preserve">修改子模块追踪分支</x:String>
+  <x:String x:Key="Text.SetSubmoduleBranch.Submodule" xml:space="preserve">子模块 ：</x:String>
+  <x:String x:Key="Text.SetSubmoduleBranch.Current" xml:space="preserve">当前追踪分支 ：</x:String>
+  <x:String x:Key="Text.SetSubmoduleBranch.New" xml:space="preserve">修改为 ：</x:String>
+  <x:String x:Key="Text.SetSubmoduleBranch.New.Tip" xml:space="preserve">可选。当不填写时，恢复默认追踪分支。</x:String>
   <x:String x:Key="Text.SetUpstream" xml:space="preserve">切换上游分支</x:String>
   <x:String x:Key="Text.SetUpstream.Local" xml:space="preserve">本地分支 ：</x:String>
   <x:String x:Key="Text.SetUpstream.Unset" xml:space="preserve">取消追踪</x:String>
@@ -746,6 +751,7 @@
   <x:String x:Key="Text.Statistics.TotalCommits" xml:space="preserve">提交次数: </x:String>
   <x:String x:Key="Text.Submodule" xml:space="preserve">子模块</x:String>
   <x:String x:Key="Text.Submodule.Add" xml:space="preserve">添加子模块</x:String>
+  <x:String x:Key="Text.Submodule.Branch" xml:space="preserve">跟踪分支</x:String>
   <x:String x:Key="Text.Submodule.CopyPath" xml:space="preserve">相对路径</x:String>
   <x:String x:Key="Text.Submodule.Deinit" xml:space="preserve">取消初始化</x:String>
   <x:String x:Key="Text.Submodule.FetchNested" xml:space="preserve">拉取子孙模块</x:String>
@@ -755,6 +761,7 @@
   <x:String x:Key="Text.Submodule.RelativePath" xml:space="preserve">相对仓库路径 ：</x:String>
   <x:String x:Key="Text.Submodule.RelativePath.Placeholder" xml:space="preserve">本地存放的相对路径。</x:String>
   <x:String x:Key="Text.Submodule.Remove" xml:space="preserve">删除</x:String>
+  <x:String x:Key="Text.Submodule.SetBranch" xml:space="preserve">修改跟踪分支</x:String>
   <x:String x:Key="Text.Submodule.SetURL" xml:space="preserve">修改远程地址</x:String>
   <x:String x:Key="Text.Submodule.Status" xml:space="preserve">状态</x:String>
   <x:String x:Key="Text.Submodule.Status.Modified" xml:space="preserve">未提交修改</x:String>
