code_review: PR #1532
- remove `MenuItemExtension`
- display `Tag` as hotkey tips when `InputGesture` is null
- remove `Avalonia.Input` reference in `ViewModels`
- rewrite `InteractiveRebase` view to avoid using `Tag` in menu item

Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/InteractiveRebase.axaml
+++ b/src/Views/InteractiveRebase.axaml
@@ -102,83 +102,7 @@
                 </Border>
 
                 <!-- Action -->
-                <Button Grid.Column="1" Opacity="1" Margin="4,0,0,0" Padding="8,2" Background="Transparent">
-                  <Button.Flyout>
-                    <MenuFlyout Placement="BottomEdgeAlignedLeft" VerticalOffset="-4">
-                      <MenuItem InputGesture="P" Click="OnChangeRebaseAction" Tag="{x:Static m:InteractiveRebaseAction.Pick}">
-                        <MenuItem.Icon>
-                          <Ellipse Width="14" Height="14" Fill="Green"/>
-                        </MenuItem.Icon>
-                        <MenuItem.Header>
-                          <Grid ColumnDefinitions="64,240">
-                            <TextBlock Grid.Column="0" Classes="primary" Margin="4,0" Text="Pick"/>
-                            <TextBlock Grid.Column="1" Text="Use this commit" Foreground="{DynamicResource Brush.FG2}"/>
-                          </Grid>
-                        </MenuItem.Header>
-                      </MenuItem>
-
-                      <MenuItem InputGesture="E" Click="OnChangeRebaseAction" Tag="{x:Static m:InteractiveRebaseAction.Edit}">
-                        <MenuItem.Icon>
-                          <Ellipse Width="14" Height="14" Fill="Orange"/>
-                        </MenuItem.Icon>
-                        <MenuItem.Header>
-                          <Grid ColumnDefinitions="64,240">
-                            <TextBlock Grid.Column="0" Classes="primary" Margin="4,0" Text="Edit"/>
-                            <TextBlock Grid.Column="1" Text="Stop for amending" Foreground="{DynamicResource Brush.FG2}"/>
-                          </Grid>
-                        </MenuItem.Header>
-                      </MenuItem>
-
-                      <MenuItem InputGesture="R" Click="OnChangeRebaseAction" Tag="{x:Static m:InteractiveRebaseAction.Reword}">
-                        <MenuItem.Icon>
-                          <Ellipse Width="14" Height="14" Fill="Orange"/>
-                        </MenuItem.Icon>
-                        <MenuItem.Header>
-                          <Grid ColumnDefinitions="64,240">
-                            <TextBlock Grid.Column="0" Classes="primary" Margin="4,0" Text="Reword"/>
-                            <TextBlock Grid.Column="1" Text="Edit the commit message" Foreground="{DynamicResource Brush.FG2}"/>
-                          </Grid>
-                        </MenuItem.Header>
-                      </MenuItem>
-
-                      <MenuItem InputGesture="S" Click="OnChangeRebaseAction" Tag="{x:Static m:InteractiveRebaseAction.Squash}" IsVisible="{Binding CanSquashOrFixup}">
-                        <MenuItem.Icon>
-                          <Ellipse Width="14" Height="14" Fill="LightGray"/>
-                        </MenuItem.Icon>
-                        <MenuItem.Header>
-                          <Grid ColumnDefinitions="64,240">
-                            <TextBlock Grid.Column="0" Classes="primary" Margin="4,0" Text="Squash"/>
-                            <TextBlock Grid.Column="1" Text="Meld into previous commit" Foreground="{DynamicResource Brush.FG2}"/>
-                          </Grid>
-                        </MenuItem.Header>
-                      </MenuItem>
-
-                      <MenuItem InputGesture="F" Click="OnChangeRebaseAction" Tag="{x:Static m:InteractiveRebaseAction.Fixup}" IsVisible="{Binding CanSquashOrFixup}">
-                        <MenuItem.Icon>
-                          <Ellipse Width="14" Height="14" Fill="LightGray"/>
-                        </MenuItem.Icon>
-                        <MenuItem.Header>
-                          <Grid ColumnDefinitions="64,240">
-                            <TextBlock Grid.Column="0" Classes="primary" Margin="4,0" Text="Fixup"/>
-                            <TextBlock Grid.Column="1" Text="Like 'Squash' but discard message" Foreground="{DynamicResource Brush.FG2}"/>
-                          </Grid>
-                        </MenuItem.Header>
-                      </MenuItem>
-
-                      <MenuItem InputGesture="D" Click="OnChangeRebaseAction" Tag="{x:Static m:InteractiveRebaseAction.Drop}">
-                        <MenuItem.Icon>
-                          <Ellipse Width="14" Height="14" Fill="Red"/>
-                        </MenuItem.Icon>
-                        <MenuItem.Header>
-                          <Grid ColumnDefinitions="64,240">
-                            <TextBlock Grid.Column="0" Classes="primary" Margin="4,0" Text="Drop"/>
-                            <TextBlock Grid.Column="1" Text="Remove commit" Foreground="{DynamicResource Brush.FG2}"/>
-                          </Grid>
-                        </MenuItem.Header>
-                      </MenuItem>
-                    </MenuFlyout>
-                  </Button.Flyout>
-
+                <Button Grid.Column="1" Opacity="1" Margin="4,0,0,0" Padding="8,2" Background="Transparent" Click="OnButtonActionClicked">
                   <StackPanel Orientation="Horizontal">
                     <Ellipse Width="14" Height="14" Fill="{Binding Action, Converter={x:Static c:InteractiveRebaseActionConverters.ToIconBrush}}"/>
                     <TextBlock Classes="primary" Margin="8,0" Text="{Binding Action, Converter={x:Static c:InteractiveRebaseActionConverters.ToName}}"/>
