--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -855,27 +855,24 @@
                 </ContentPresenter.DataTemplates>
               </ContentPresenter>
 
-              <TextBlock x:Name="PART_InputGestureText"
-                         Grid.Column="2"
+              <TextBlock Grid.Column="2"
                          Classes="CaptionTextBlockStyle"
                          Margin="{DynamicResource MenuInputGestureTextMargin}"
                          Text="{TemplateBinding InputGesture, Converter={StaticResource KeyGestureConverter}}"
                          HorizontalAlignment="Right"
                          VerticalAlignment="Center"
                          Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"
-                         FontSize="11"
-                         IsVisible="{TemplateBinding (v:MenuItemExtension.Command), Converter={x:Static StringConverters.IsNullOrEmpty}}"/>
+                         FontSize="11"/>
 
-              <TextBlock x:Name="PART_CommandTip"
-                         Grid.Column="2"
+              <TextBlock Grid.Column="2"
                          Classes="CaptionTextBlockStyle"
                          Margin="{DynamicResource MenuInputGestureTextMargin}"
-                         Text="{TemplateBinding (v:MenuItemExtension.Command)}"
+                         Text="{TemplateBinding Tag}"
                          HorizontalAlignment="Right"
                          VerticalAlignment="Center"
                          Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"
                          FontSize="11"
-                         IsVisible="{TemplateBinding (v:MenuItemExtension.Command), Converter={x:Static StringConverters.IsNotNullOrEmpty}}"/>
+                         IsVisible="{TemplateBinding InputGesture, Converter={x:Static ObjectConverters.IsNull}}"/>
 
               <Path Name="PART_ChevronPath"
                     Width="6"
@@ -930,9 +927,6 @@
       </Style>
       <Style Selector="^ /template/ ContentPresenter#PART_HeaderPresenter">
         <Setter Property="Foreground" Value="{DynamicResource MenuFlyoutItemForegroundPointerOver}" />
-      </Style>
-      <Style Selector="^ /template/ TextBlock#PART_InputGestureText">
-        <Setter Property="Foreground" Value="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForegroundPointerOver}" />
       </Style>
       <Style Selector="^ /template/ Path#PART_ChevronPath">
         <Setter Property="Fill" Value="{DynamicResource MenuFlyoutSubItemChevronPointerOver}" />
